<resources>
    <string name="app_name">ESP Light</string>
    <string name="devices_tab">Devices</string>
    <string name="add_device_tab">Add a Device</string>
    <string name="settings_tab">Settings</string>

    <!--ADD MODULE -->
    <string name="add_module_searching">Searching for devices</string>
    <string name="add_module_empty_message">No devices found. Make sure device and module are connected to the same wireless network or try adding module manually.</string>
    <string name="refresh_button">Search Again</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_add">Add device manually</string>

    <!--ADD MODULE DIALOG-->
    <string name="confirm_title">Connection Information</string>
    <string name="edittext_display_name">Display Name</string>
    <string name="edittext_chip_id_hint">Chip ID</string>
    <string name="edittext_ip">IP Address</string>
    <string name="edittext_port">Port</string>
    <string name="button_save">Save</string>
    <string name="button_test">Test</string>
    <string name="display_name_default">My Light</string>

    <string name="edittext_mqtt_ip">MQTT IP Address</string>
    <string name="edittext_mqtt_port">MQTT Port</string>

    <!--Bottom Navigation-->
    <string name="action_devices">Devices</string>
    <string name="action_add_device">Add Device</string>
    <string name="action_settings">Settings</string>

    <!--Content Descriptions-->
    <string name="connection_check_cd">Connection status</string>
    <string name="power_cd">Power status</string>

    <string name="pattern">Pattern: </string>
    <string name="title_activity_settings">Settings</string>

    <!--SETTINGS-->

    <string name="settings_title_phone_events">Phone Events</string>
    <string name="settings_header1">Select device</string>

    <!--DIALOG FRAGMENT-->
    <string name="event1">Incoming Call</string>
    <string name="dismiss_df">Dismiss</string>
    <string name="ok_df">OK</string>
    <string name="title_df">Choose events to trigger device</string>

    <string-array name="events">
        <item>Incoming call</item>
        <item>Incoming message</item>
    </string-array>

</resources>
