<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_devices"
        android:enabled="true"
        android:icon="@drawable/ic_device_hub_black_24dp"
        android:title="@string/action_devices"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add"
        android:enabled="true"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/action_add_device"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
</menu>