<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bsunk.esplight.addModule.AddModuleFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/add_modules_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/searchingLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_module_searching"/>

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AVLoadingIndicatorView"
            app:indicatorName="BallPulseIndicator"
            app:indicatorColor="@color/colorAccent"
        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible"
        android:orientation="vertical"
        android:id="@+id/emptyMessageLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center"
            android:text="@string/add_module_empty_message"/>

        <Button
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/refresh_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_gravity="center"/>

    </LinearLayout>

</RelativeLayout>
