<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout android:orientation="vertical"
        android:background="@color/rv_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout android:orientation="horizontal"
            android:background="@color/rv_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <com.bsunk.makeglow.MakeGlow
                android:id="@+id/glowView"
                xmlns:lightBulbView="http://schemas.android.com/apk/res-auto"
                android:contentDescription="@string/power_cd"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight=".1"
                android:layout_gravity="bottom"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_marginStart="5dp"
                lightBulbView:drawable="@drawable/ic_lightbulb_outline_black_48dp"
                lightBulbView:blurFilter="3"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight=".6"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/device_name"
                    android:textSize="18sp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:id="@+id/device_brightness"
                    android:textSize="16sp"
                    android:layout_gravity="center" />

                <SeekBar
                    android:id="@+id/brightness_seekbar"
                    android:layout_marginTop="3dp"
                    android:max="100"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <ImageView
                android:id="@+id/connection_iv"
                android:contentDescription="@string/connection_check_cd"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_weight=".05"
                android:layout_marginEnd="5dp"
                android:layout_gravity="bottom"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="14sp"
                android:text="@string/pattern"/>

            <Spinner
                android:id="@+id/device_pattern_spinner"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>

            <ImageView
                android:id="@+id/device_color_picker"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:visibility="gone"
                android:layout_gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"/>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>